<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="register"
            type="com.ch.wchhuangya.android.pandora.vm.account.RegisterVM"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/textColorPrimary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="25dp"
            >

            <FrameLayout
                android:id="@+id/register_name_fl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.marvinlabs.widget.floatinglabel.edittext.FloatingLabelEditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:flw_inputWidgetTextSize="18sp"
                    app:flw_labelText="@string/username_tips"
                    app:flw_labelTextColor="@color/colorPrimary"
                    app:flw_labelTextSize="20sp"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/register_pwd_fl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.marvinlabs.widget.floatinglabel.edittext.FloatingLabelEditText
                    android:id="@+id/register_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:flw_inputWidgetTextSize="18sp"
                    app:flw_labelText="@string/password_tips"
                    app:flw_labelTextColor="@color/colorPrimary"
                    app:flw_labelTextSize="20sp"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/register_repeat_pwd_fl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.marvinlabs.widget.floatinglabel.edittext.FloatingLabelEditText
                    android:id="@+id/register_repeat_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:flw_inputWidgetTextSize="18sp"
                    app:flw_labelText="@string/password_repeat"
                    app:flw_labelTextColor="@color/colorPrimary"
                    app:flw_labelTextSize="20sp"
                    />
            </FrameLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true"
                >

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/finish_register"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    />
            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>

    </LinearLayout>
</layout>