<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="info"
            type="com.ch.wchhuangya.android.pandora.vm.life.QueryIdentificationCardInfoVM"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            >

            <FrameLayout
                android:id="@+id/card_info_fl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/card_info_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_id_card_tips"
                    />
            </FrameLayout>

            <Button
                android:id="@+id/card_info_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/card_info_fl"
                android:layout_marginBottom="55dp"
                android:text="@string/query"
                />

            <TextView
                android:id="@+id/card_sex_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_info_btn"
                android:background="#ddd"
                android:padding="5dp"
                android:text="@string/sex_title"
                android:textColor="#222"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/card_sex_val_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_info_btn"
                android:layout_toRightOf="@id/card_sex_title_tv"
                android:background="#ddd"
                android:padding="5dp"
                android:textColor="#222"
                android:textSize="18sp"
                android:text="@{info.sex}"
                tools:text="未知"
                />

            <TextView
                android:id="@+id/card_birth_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_sex_title_tv"
                android:layout_marginTop="15dp"
                android:background="#ddd"
                android:padding="5dp"
                android:text="@string/birth_title"
                android:textColor="#222"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/card_bitth_val_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_sex_title_tv"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/card_birth_title_tv"
                android:background="#ddd"
                android:padding="5dp"
                android:textColor="#222"
                android:textSize="18sp"
                android:text="@{info.birth}"
                tools:text="1987年04月20日"
                />

            <TextView
                android:id="@+id/card_address_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_birth_title_tv"
                android:layout_marginTop="15dp"
                android:background="#ddd"
                android:padding="5dp"
                android:text="@string/address_title"
                android:textColor="#222"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/card_address_val_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_birth_title_tv"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/card_address_title_tv"
                android:background="#ddd"
                android:padding="5dp"
                android:textColor="#222"
                android:textSize="18sp"
                android:text="@{info.address}"
                tools:text="湖北省孝感市汉川市"
                />

        </RelativeLayout>
        <fr.castorflex.android.circularprogressbar.CircularProgressBar
            android:id="@+id/card_info_pb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:indeterminate="true"
            app:cpb_color="#FFee44"
            app:cpb_colors="@array/my_color"
            app:cpb_max_sweep_angle="300"
            app:cpb_min_sweep_angle="10"
            app:cpb_rotation_speed="1.0"
            app:cpb_stroke_width="4dp"
            app:cpb_sweep_speed="1.0"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:visibility="@{info.pbShow ? View.VISIBLE : View.GONE}"
            />
        <FrameLayout
            android:id="@+id/card_info_middle_fl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="50dp"
            />
    </FrameLayout>
</layout>